<resources>
    <string name="app_name" translatable="false">DIAWMS</string>
    <string name="AWMS_ICON" translatable="false">ic_module_wms</string>
    <string name="AMES_ICON" translatable="false">ic_module_mes</string>
    <string name="ASPC_ICON" translatable="false">ic_module_spc</string>
    <string name="APMS_ICON" translatable="false">ic_module_pms</string>
    <string name="ARMS_ICON" translatable="false">ic_module_rms</string>
    <string name="AAMS_ICON" translatable="false">ic_module_ams</string>
    <string name="AWMS" translatable="false">WMS</string>
    <string name="AMES" translatable="false">MES</string>
    <string name="ASPC" translatable="false">SPC</string>
    <string name="APMS" translatable="false">PMS</string>
    <string name="ARMS" translatable="false">RMS</string>
    <string name="AAMS" translatable="false">AMS</string>
    <string name="CONNECTION_URL">CONNECTION_URL</string>
    <string name="CONNECTION_PORTAL_URL">Connection Portal Url</string>
    <string name="CONNECTION_SSO_URL">CONNECTION_SSO_URL</string>
    <string name="CONFIG_SETTING">CONFIG_SETTING</string>
    <string name="VERSION_UPDATE">VERSION_UPDATE</string>
    <string name="USER_ID">USER_ID</string>
    <string name="USER_NAME">USER_NAME</string>
    <string name="USER_INFO">USER_INFO</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="LOGIN">LOGIN</string>
    <string name="FUNCTION_MENU">FUNCTION_MENU</string>
    <string name="SEARCH">Search</string>
    <string name="OK">OK</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="CANCEL">CANCEL</string>
    <string name="BACK">BACK</string>
    <string name="CLOSE">CLOSE</string>
    <string name="PICK_DETAIL_INFO">PICK_DETAIL_INFO</string>
    <string name="MFG_DATE">MFG_DATE</string>
    <string name="EXP_DATE">EXP_DATE</string>
    <string name="FROM_BIN_ID">FROM_BIN_ID</string>
    <string name="TO_BIN">TO_BIN</string>
    <string name="CHANGE_BIN_LIST">CHANGE_BIN_LIST</string>
    <string name="INVENTORY_QTY">INVENTORY_QTY</string>
    <string name="TIP">TIP</string>
    <string name="TEMP_BIN">TEMP_BIN</string>
    <string name="TO_OT_BIN">TO_OT_BIN</string>
    <string name="ALLOWED_NOTIFICATION">ALLOWED_NOTIFICATION</string>
    <string name="PENDING_SHEET_NUM">PENDING_SHEET_NUM</string>
    <string name="QRCODE_SCAN_CANCEL">QRCODE_SCAN_CANCEL</string>
    <string name="RETURN_BIN">RETURN_BIN</string>
    <string name="MODIFY">MODIFY</string>
    <string name="MTL_SHEET_TYPE">Mtl Sheet Type</string>
    <string name="MTL_SHEET_ID">Mtl Sheet ID</string>
    <string name="SHEET_MASTER_INFO">Sheet Master Information</string>
    <string name="PICKED_INFO">Picked Information</string>
    <string name="SHEET_CREATE_DATE_TITLE">Sheet Create Date</string>
    <string name="LOT_ID_TITLE">Lot Id</string>
    <string name="STORAGE_ID_TITLE">Storage Id</string>
    <string name="BIN_ID_TITLE">Bin Id</string>
    <string name="QTY_TITLE">Qty</string>
    <string name="UOM_TITLE">Uom</string>
    <string name="TRX_CMT_TITLE">Transaction Comment</string>
    <string name="OS_BIN">OS Bin</string>
    <string name="TARGET_BIN">Target Bin</string>
    <string name="SELECT_SHEET_ID">SELECT_SHEET_ID</string>
    <string name="DN_ID">DN_ID</string>
    <string name="SEQ">SEQ</string>
    <string name="ITEM">ITEM</string>
    <string name="LOT">LOT</string>
    <string name="QTY">QTY</string>
    <string name="INPUT_DN_ID">INPUT_DN_ID</string>
    <string name="FROM_DATE">FROM_DATE</string>
    <string name="TO_DATE">TO_DATE</string>
    <string name="SHEET_ID">SHEET_ID</string>
    <string name="ITEM_ID">ITEM_ID</string>
    <string name="REGISTER_ID">REGISTER_ID</string>
    <string name="SKU_ID">SKU_ID</string>
    <string name="LOT_CODE">LOT_CODE</string>
    <string name="BIN_ID">BIN_ID</string>
    <string name="BIN">BIN</string>
    <string name="REGISTER_PICKED">REGISTER_PICKED</string>
    <string name="REGISTER_UNPICKED">REGISTER_UNPICKED</string>
    <string name="CAN_PICKED_DATE">Can Pick Date</string>
    <string name="CAN_PICKED_INFO">Can Pick Info</string>
    <string name="PICK_REQUIRE_QTY">Picked/Require</string>
    <string name="RSV_PICK_REQUIRE_QTY">Reserved/Picked/Require</string>
    <string name="CAN_NEED_RSV_PICK_QTY">Can Pick/Need To Pick/Reserved</string>
    <string name="BATCH_ID">BATCH_ID</string>
    <string name="BATCH_POSITION">BATCH_POSITION</string>
    <string name="PICKING_SHT_ID">PICKING_SHT_ID</string>
    <string name="SEARCH_ITEM">SEARCH_ITEM</string>
    <string name="ITEM_SPEC_CTRL_HINT_MSG">ITEM_SPEC_CTRL_HINT_MSG</string>
    <string name="ITEM_SPEC_CTRL_HOLD_MSG">ITEM_SPEC_CTRL_HOLD_MSG</string>
    <string name="CHECK_ID"> CHECK_ID</string>
    <string name="START_CHECK">START_CHECK</string>
    <string name="END_CHECK"> END_CHECK </string>
    <string name="RECORD_COUNT"> RECORD_COUNT</string>
    <string name="FIRST_COUNT_QTY">FIRST_COUNT_QTY</string>
    <string name="SECOND_COUNT_QTY">SECOND_COUNT_QTY</string>
    <string name="COUNT_QTY">COUNT_QTY</string>
    <string name="EXECUTE_COUNT">EXECUTE_COUNT</string>
    <string name="COUNT_HISTORY">COUNT_HISTORY</string>
    <string name="SELECT_COUNT_ID">SELECT_COUNT_ID</string>
    <string name="CREATE_NEW_COUNT_DATA">CREATE_NEW_COUNT_DATA</string>
    <string name="CREATE">CREATE</string>
    <string name="WAIT_ON_BIN_INFO">WAIT_ON_BIN_INFO</string>
    <string name="INPUT_SHEET_ID">INPUT_SHEET_ID</string>
    <string name="STORAGE_ID">STORAGE_ID</string>
    <string name="PROC_QTY">PROC_QTY</string>
    <string name="TO_BIN_ID">TO BIN ID</string>
    <string name="TO_CARRIER_ID">TO CARRIER ID</string>
    <string name="TO_BLOCK_ID">TO BLOCK ID</string>
    <string name="UNREC">UNREC</string>
    <string name="IS_BIN">IS_BIN</string>
    <string name="SELECT_SHEET_TYPE">SELECT_SHEET_TYPE</string>
    <string name="PUT_AWAY_BIN">PUT_AWAY_BIN</string>
    <string name="DN_INFO">Delivery Note Information</string>
    <string name="PICK_INFO">Pick Information</string>
    <string name="ORDER_ID">Order Id</string>
    <string name="RESERVE_QTY">Reserve Qty</string>
    <string name="SELECT_DELIVERY_NOTE_ID">SELECT_DELIVERY_NOTE_ID</string>
    <string name="DN_PICKING_ID"></string>
    <string name="SHIP_DATE">SHIP_DATE</string>
    <string name="DELIVERY_ADDRESS">DELIVERY_ADDRESS</string>
    <string name="LICENSE_PLATE">LICENSE_PLATE</string>
    <string name="PHONE">PHONE</string>
    <string name="DRIVER">DRIVER</string>
    <string name="PALLET_ID">PALLET_ID</string>
    <string name="SHIP_COMPLETE">SHIP_COMPLETE</string>
    <string name="SHIP">SHIP</string>
    <string name="ADD_PLATE">ADD_PLATE</string>
    <string name="SELECT_PLATE">SELECT_PLATE</string>
    <string name="SELECT_OS_BIN_ID">SELECT_OS_BIN_ID</string>
    <string name="OS_BIN_ID">OS_BIN_ID</string>
    <string name="DN_PICK_INFO">DN_PICK_INFO</string>
    <string name="DN_MASTER_INFO">DN_MASTER_INFO</string>
    <string name="PRE_SHIP_INFO">PRE_SHIP_INFO</string>
    <string name="SHEET_DETAIL_INFO">Sheet Detail Information</string>
    <string name="MTL_LOT_NO"> MTL_LOT_NO </string>
    <string name="SHEET_DETAIL">Sheet Detail</string>
    <string name="GR_SN">Material</string>
    <string name="ADD_LOT">Add Lot</string>
    <string name="SAVE_LOT">Save Lot</string>
    <string name="ADD_SKU_ID">Add SKU Id</string>
    <string name="SAVE_SKU_ID">Save SKU Id</string>
    <string name="ADD_SN">Add Sn Id</string>
    <string name="DEL_SN">Delete Sn Id</string>
    <string name="RECEIVE">Receive</string>
    <string name="RECEIVE_ALL">Receive All</string>
    <string name="SKIP_QC">Skip Qc</string>
    <string name="MODIFY_RECEIVE_DETAIL">Modify Receive Detail</string>
    <string name="SN_ID">Sn Id</string>
    <string name="SHEET_STATUS">Sheet Status</string>
    <string name="ITEM_NAME">Item Name</string>
    <string name="REQUIRE_QTY">Received/Require</string>
    <string name="CUSTOMER_NAME">CUSTOMER_NAME</string>
    <string name="CUSTOMER_ID">CUSTOMER_ID</string>
    <string name="SIZE">SIZE</string>
    <string name="EXTEND_NAME">EXTEND_NAME</string>
    <string name="EXTEND_VALUE">EXTEND_VALUE</string>
    <string name="SELECT_SIZE">SELECT_SIZE</string>
    <string name="EXTEND_DATA">EXTEND_DATA</string>
    <string name="BARCODE">BARCODE</string>
    <string name="QRCODE">QRCODE</string>
    <string name="RECEIVE_BARCODE">RECEIVE_BARCODE</string>
    <string name="RECEIVE_LIST">RECEIVE_LIST</string>
    <string name="SKU_LEVEL">SKU_LEVEL</string>
    <string name="SKU_NUM">SKU_NUM</string>
    <string name="CHANGE_SKU_LEVEL">CHANGE_SKU_LEVEL</string>
    <string name="RECEIVE_SHEET_TYPE">Receive Sheet Type</string>
    <string name="VENDOR">Vendor</string>
    <string name="VENDOR_SHIP_NO">Vendor Ship No</string>
    <string name="VENDOR_SHIP_DATE">Vendor Ship Date</string>
    <string name="PO_NO">PO No</string>
    <string name="PO_SEQ">PO Seq</string>
    <string name="REC_LOT">Rec Lot</string>
    <string name="FIFO_LOT">FIFO Lot</string>
    <string name="UOM">UOM</string>
    <string name="MFD_DATE">MFD Date</string>
    <string name="EXPIRY_DATE">Expiry Date</string>
    <string name="SKIP_FLAG">Skip Flag</string>
    <string name="RECEIVE_INFO">Receive Info</string>
    <string name="RECEIVE_DET">Receive Det</string>
    <string name="REFRESH">Refresh</string>
    <string name="CLEAR">clear</string>
    <string name="REGISTER_TYPE">Register Type</string>
    <string name="SN_INFO">SN Info</string>
    <string name="SELECT_IS_BIN_ID">SELECT_IS_BIN_ID</string>
    <string name="IS_BIN_ID">IS_BIN_ID</string>
    <string name="CUSTOMER">CUSTOMER</string>
    <string name="SELECT_CUSTOMER_ID">SELECT_CUSTOMER_ID</string>
    <string name="MODIFY_SKU_ID">Modify SKU Id</string>
    <string name="SOURCE">Source</string>
    <string name="ORGAN">Organ</string>
    <string name="SCRAP_QTY">Scrap Qty</string>
    <string name="SHEET_TYPE">Sheet Type</string>
    <string name="SELECT_BIN_ID">Select Bin ID</string>
    <string name="WAREHOUSE_INFO">Warehouse Info</string>
    <string name="WAREHOUSE_DET">Warehouse Det</string>
    <string name="WAREHOUSE_STORAGE_DET">Warehouse Storage Det</string>
    <string name="WAREHOUSE_STORAGE">Warehouse Storage</string>
    <string name="WAREHOUSE_STORAGE_ALL">Warehouse Storage All</string>
    <string name="ADD_WS_DET">Add Warehouse Storage Detail</string>
    <string name="DEPARTMENT">Department</string>
    <string name="ADD">Add</string>
    <string name="BEST_BIN">Best Bin</string>
    <string name="REGISTER_DETAIL">Register Detail</string>
    <string name="RECOMMEND_INFO">Recommend Info</string>
    <string name="RECOMMEND_BIN">Recommend Bin</string>
    <string name="RECOMMEND_CARRIER">Recommend Carrier</string>
    <string name="RECOMMEND_BLOCK">Recommend Block</string>
    <string name="RECOMMEND_OK">Recommend OK</string>
    <string name="SELECT_LOT_ID">Please select Lot Id.</string>
    <string name="SELECT_SKU_ID">Please select SKU Id.</string>
    <string name="CARRIER">Carrier</string>
    <string name="CARRIER_STOCK_OUT">CarrierStockOut</string>
    <string name="CARRIER_STOCK_IN">CarrierStockIn</string>
    <string name="CARRIER_REGISTER_BIND">CarrierRegisterBind</string>
    <string name="BLOCK_ID">BLOCK_ID</string>
    <string name="CARRIER_REGISTER_UNBIND">CarrierRegisterUnBind</string>
    <string name="CART">CART</string>
    <string name="FROM_BIN">FROM_BIN</string>
    <string name="END_BIN">END_BIN</string>
    <string name="USER">User</string>
    <string name="CMT">Comment</string>
    <string name="USER_START_DATETIME">User Start Date</string>
    <string name="USER_END_DATETIME">User End Date</string>
    <string name="SELECT_WORK_START_DATE">Please Select Start Date</string>
    <string name="SELECT_WORK_START_TIME">Please Select Start Time</string>
</resources>