<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etCheckExecuteItemId"
            style="@style/WmsEditTextNecessary"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_control_margin"
            android:hint="@string/ITEM_ID" />

        <EditText
            android:id="@+id/etCheckExecuteBinId"
            style="@style/WmsEditTextNecessary"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_control_margin"
            android:hint="@string/BIN_ID" />

        <EditText
            android:id="@+id/etCheckExecuteRegisterId"
            style="@style/WmsEditTextNecessary"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_control_margin"
            android:hint="@string/SKU_ID" />

        <EditText
            android:id="@+id/etCheckRegisterQty"
            style="@style/WmsEditTextNormal"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_control_margin"
            android:hint="@string/INVENTORY_QTY"
            android:inputType="number" />

        <EditText
            android:id="@+id/etCheckExecuteQty"
            style="@style/WmsEditTextNecessary"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_control_margin"
            android:hint="@string/QTY"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCreate"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/CREATE" />

        <Button
            android:id="@+id/btCancel"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/CANCEL" />
    </LinearLayout>

</LinearLayout>
