<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_activity_background"
    android:orientation="vertical"
    tools:context="com.delta.android.WMS.Client.GoodReceiptReceiveLotSnModifyActivity">

    <TextView
        android:id="@+id/tvMstInfoTitle"
        style="@style/WmsTextViewBarTitle"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:text="@string/MODIFY_RECEIVE_DETAIL" />

    <LinearLayout
        style="@style/CommonLinearLayoutGroupBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibtnGrLotGridLotIdQRScan"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:background="#00000000"
                android:src="@drawable/ic_scan_64x64"/>

            <EditText
                android:id="@+id/tvGrLotGridLotId"
                style="@style/WmsEditTextNecessary"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_control_margin"
                android:layout_marginBottom="@dimen/common_control_margin"
                android:hint="@string/SKU_ID"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="" />

        </LinearLayout>

        <EditText
            android:id="@+id/tvGrLotGridQty"
            style="@style/WmsEditTextNecessary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_control_margin"
            android:hint="@string/QTY"
            android:singleLine="true"
            android:text=""
            android:inputType="number"/>

        <EditText
            android:id="@+id/tvGrLotGridUom"
            style="@style/WmsEditTextNormal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_control_margin"
            android:hint="@string/UOM_TITLE"
            android:singleLine="true"
            android:text="" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <EditText
                android:id="@+id/tvGrLotGridMfgDate"
                style="@style/WmsEditTextNecessary"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/common_control_margin"
                android:ems="10"
                android:hint="@string/MFG_DATE" />

            <Button
                android:id="@+id/btnMfgDateClear"
                style="@style/WmsButtonClear"
                android:onClick="onClickMfgDateClear" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <EditText
                android:id="@+id/tvGrLotGridExpDate"
                style="@style/WmsEditTextNecessary"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/common_control_margin"
                android:ems="10"
                android:hint="@string/EXP_DATE" />

            <Button
                android:id="@+id/btnExpDateClear"
                style="@style/WmsButtonClear"
                android:onClick="onClickExpDateClear" />
        </FrameLayout>

        <EditText
            android:id="@+id/tvGrLotGridCmt"
            style="@style/WmsEditTextNormal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_control_margin"
            android:hint="@string/TRX_CMT_TITLE"
            android:singleLine="true"
            android:text="" />

    </LinearLayout>

    <TextView
        style="@style/WmsTextViewBarTitle"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:text="@string/GR_SN" />

    <ListView
        android:id="@+id/lvSnData"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="9">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/RECEIVE" />

        <Button
            android:id="@+id/btnAddSn"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/ADD_SN" />

        <Button
            android:id="@+id/btnDeleteSn"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/DEL_SN" />
    </LinearLayout>


</LinearLayout>
