<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            style="@style/CommonLinearLayoutGroupBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_control_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextView"
                    android:layout_width="100dp"
                    android:text="@string/USER" />

                <Spinner
                    android:id="@+id/spWorkUserId"
                    style="@style/PmsSpinnerNecessary"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/common_control_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/USER_START_DATETIME" />

                <EditText
                    android:id="@+id/edUserStartDate"
                    style="@style/PmsEditTextNecessary"
                    android:layout_weight="1"
                    android:hint="@string/SELECT_WORK_START_DATE" />

                <EditText
                    android:id="@+id/edUserStartTime"
                    style="@style/PmsEditTextNecessary"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/SELECT_WORK_START_TIME" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/common_control_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/USER_END_DATETIME" />

                <EditText
                    android:id="@+id/edUserSEndDate"
                    style="@style/PmsEditTextNecessary"
                    android:layout_weight="1"
                    android:hint="@string/SELECT_WORK_START_DATE" />

                <EditText
                    android:id="@+id/edUserSEndTime"
                    style="@style/PmsEditTextNecessary"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/SELECT_WORK_START_TIME" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_control_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextView"
                    android:layout_width="100dp"
                    android:text="@string/CMT" />

                <EditText
                    android:id="@+id/edUserWhCmt"
                    style="@style/PmsEditTextNormal"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/CANCEL" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/CommonButton"
            android:layout_weight="1"
            android:text="@string/CONFIRM" />
    </LinearLayout>

</LinearLayout>